--- a/template/UploadFile.html
+++ b/template/UploadFile.html
@@ -7,6 +7,7 @@
 <form action="#", method="post", enctype="multipart/form-data">
   <input type="file" id="uploadedFile" name="uploadedFile" >
   <input type="submit">
+  <input type="text" id="uploadLink" name="uploadLink">
 </form>
 
 <button onclick="location.href = '/uploaded'">uploaded</button>
