--- a/template/UploadFile.html
+++ b/template/UploadFile.html
@@ -90,7 +90,7 @@
       <p class="help-block">Chọn tệp bất kỳ (PDF, ảnh, v.v).</p>
     </div>
 
-    <button type="submit" class="btn btn-custom btn-block">🚀 Gửi</button>
+    <button type="submit" class="btn btn-custom btn-block">Gửi</button>
     <div id="message" class="text-center" style="margin-top: 12px;"></div>
   </form>
 </div>
