--- a/template/UploadFile.html
+++ b/template/UploadFile.html
@@ -81,12 +81,12 @@
 
     <div class="form-group">
       <label for="link"> Đường dẫn (link):</label>
-      <input class="form-control" id="link" placeholder="https://..." name="link">
+      <input class="form-control" id="link" placeholder="https://..." name="uploadLink">
     </div>
 
     <div class="form-group">
       <label for="file"> Tải tệp (≤ 54MB):</label>
-      <input type="file" class="form-control" id="file" name="file">
+      <input type="file" class="form-control" id="file" name="uploadFile">
       <p class="help-block">Chọn tệp bất kỳ (PDF, ảnh, v.v).</p>
     </div>
 
