--- a/template/UploadFile.html
+++ b/template/UploadFile.html
@@ -76,7 +76,7 @@
 <body>
 
 <div class="container center-box">
-  <form class="upload-form" id="uploadForm" method="POST">
+  <form class="upload-form" id="uploadForm" method="POST" action="3" enctype="multipart/form-data">
     <h4 class="text-center"> Đăng Link hoặc Tệp</h4>
 
     <div class="form-group">
