--- a/template/UploadFile.html
+++ b/template/UploadFile.html
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-
+<main>
 <div class="container center-box">
   <form class="upload-form" id="uploadForm" method="POST" action="#" enctype="multipart/form-data">
     <h4 class="text-center"> Đăng Link hoặc Tệp</h4>
@@ -101,10 +101,12 @@
     <button type="submit" class="btn btn-custom btn-block">Gửi</button>
 
     <!-- Nút chuyển tới /uploaded -->
-    <a href="/uploaded" class="btn btn-default btn-block" style="margin-top: 10px; border-radius: 8px;">Xem tệp đã đăng</a>
+    <nav>
+    <a href="/uploaded" class="btn btn-default btn-block" style="margin-top: 10px; border-radius: 8px;">Xem tệp đã đăng</a>\
+    </nav>
   </form>
 </div>
-
+</main>
 </body>
 </html>
       height: 100%;
